# To-do-CLI

./: .env  .gitignore  .test.env  docker-compose.yml  init-db.sql  pyproject.toml  pytest.ini
src/to_do_list/: cli.py  config.py  custom_types.py  database.py  exceptions.py  models.py  repository.py  service.py
test/integration/: conftest.py  test_db.py
test/unit/: conftest.py  test_cli.py
todo/: .dev.env  Dockerfile  constraints.txt
todo/src/to_do_list/: cli.py  exceptions.py  models.py  service.py
todo/test/integration/: conftest.py  test_db.py
todo/test/unit/: test_cli.py
